@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.41 2007-08-12 21:31:53 cmatsuoka Exp $
+$Id: ChangeLog,v 1.42 2007-08-13 02:23:42 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -21,8 +21,11 @@ Stable versions
 	- replaced non-free PowerPack depacker with Kyzer's PD version
 	- replaced list management in IFF loader with kernel list helpers
 	- fixed long-standing bug in S3M BPM handling, "Panic" plays correctly
-	- fixed effects, pattern order and memory corruption problems in MDL
+	- fixed MDL effects translation
+	- fixed MDL pattern order loading missing first pattern
+	- fixed MDL memory corruption in envelope initialization
 	- fixed MDL 16-bit sample loading (reported by Paul Wise)
+	- fixed MDL multisampled instrument mapping
 	- fixed XM and MDL sample loop size
 	- fixed issues with OpenBSD
 	- fixed issues with 64-bit machines
